--- a/HQTCSDL/css/mycss.css
+++ b/HQTCSDL/css/mycss.css
@@ -1,3 +1,59 @@
+.fa-search{
+    color: black;
+}
+.sl{
+    width: 50px;
+}
+
+.search-suggest ul {list-style:none; padding:0; position:relative;}
+.search-suggest ul li.ss-title { background: #eee;}
+.search-suggest ul li.ss-title i{ margin-right:3px;}
+.search-suggest ul li{padding:10px;display:block; width:100%; overflow:hidden; color:#333; border-bottom:1px solid #eee; line-height: 1.2em;}
+.search-suggest ul li:hover{ background: #fafafa;}
+.search-suggest ul li .thumb{ float: left; width: 66px; margin-right: 10px;}
+.search-suggest ul li .thumb-news{ float: left; width: 80px; height:50px; margin-right: 10px;}
+.search-suggest ul li .ss-name{ margin-bottom: 3px; font-size: 14px; color: #333 !important; line-height: 1.4em; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; max-width: 100%; overflow: hidden;}
+.search-suggest ul li .ss-price{ color: #f00; font-size: 14px; margin-bottom: 0;}
+#searchform {
+  opacity: 0;
+  padding-top: 12px;
+  position: absolute;
+  right: -1px;
+  top: 100%;
+  transform: scaleY(0);
+  transform-origin: 0 0 0;
+  transition: all 0.4s ease 0s;
+  width: 350px;
+}
+#searchform input {
+    background: #666 none repeat scroll 0 0;
+    border: 1px solid #999;
+    color: #ccc;
+    float: left;
+    font-size: 12px;
+    padding: 10.5px 0 8.5px 10px;
+    position: relative;
+    width: 100%;
+}
+#searchform button {
+    background: #333 none repeat scroll 0 0;
+    border: 0 none;
+    float: right;
+    padding: 5.5px 10px;
+    position: absolute;
+    right: 1px;
+    text-align: center;
+    top: 13px;
+}
+#searchform button i {
+    line-height: 20px;
+    margin: 0;
+    padding: 0 5px;
+}
+
+.form-inline {
+    text-align: center;
+}
 .breadcrumb-item + .breadcrumb-item::before {
   content: "|" !important;
 }
@@ -16,7 +72,6 @@
     .fb_invisible {
         display: none
     }
-
     .fb_reset {
         background: none;
         border: 0;
